Refactor and reorganize analysis pipeline
Deleted the old 'full_analysis.ipynb' notebook and replaced it with a new modular structure: added 'main_pipeline.ipynb' and 'main_pipeline.py' as the new entry points, moved full analysis to 'pilot/full_analysis.ipynb' and 'pilot/full_analysis.py', and renamed 'full_analysis_script..py' to 'pilot/full_analysis_script.py'. Updated the README with detailed instructions, clearer data contract, and improved usage documentation.

--- a/main_pipeline.ipynb
+++ b/main_pipeline.ipynb
@@ -1522,7 +1522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "567a2cb1",
    "metadata": {},
    "outputs": [
@@ -1560,7 +1560,7 @@
     "    'ap_peak', 'threshold', 'ahp', 'peak_to_trough', 'rise_time', 'half_width'\n",
     "]\n",
     "\n",
-    "all_df = pd.merge(df_basic_io, df_waveform, on=['cell_id','treatment'], how='outer', suffixes=('_basic','_wave'))\n",
+    "all_df = pd.merge(df_basic_io, df_waveform, on=['cell_id'], how='outer', suffixes=('_basic','_wave'))\n",
     "\n",
     "# Melt: combine basic_io and waveform into one tidy table\n",
     "basic_melt = df_basic_io.melt(id_vars=['cell_id','treatment'], value_vars=[c for c in basic_io_cols if c in df_basic_io.columns],\n",
@@ -1588,7 +1588,7 @@
     "#     g.ax.legend(handles[:len(set(labels))], list(dict.fromkeys(labels)))\n",
     "\n",
     "# plt.tight_layout()\n",
-    "save_plot_and_data('section7_melted', 'melted_catplot_all_vars', all_melt, g.figure, {'note':'Variables may mix units.'})"
+    "save_plot_and_data('section7_melted', 'melted_catplot_all_vars', all_df, g.figure, {'note':'Variables may mix units.'})"
    ]
   },
   {
